syntax = "proto3";

import "scalapb/scalapb.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "dev/toothpick/proto/api/test-event.proto";
import "dev/toothpick/proto/api/test-hierarchy.proto";

package dev.toothpick.proto.api;

service TpApi {
  rpc Run (TpRunRequest) returns (TpRunResponse) {
  }

  rpc Abort (TpAbortRequest) returns (TpAbortResponse) {
  }

  rpc Watch (TpWatchRequest) returns (stream TpWatchResponse) {
  }

  rpc GetDistributions (TpGetDistributionsRequest) returns (stream TpRunDistribution) {
  }
}

message TpTestRunOptions {
  string image = 1;
  repeated string args = 2;
}

message TpRunRequest {
  map<int32, TpTestNode> hierarchy = 1;
  map<int32, TpTestRunOptions> run_options = 2;
}

message TpRunTestId {
  string runId = 1 [(scalapb.field).type = "java.util.UUID"];
  int32 testId = 2;
}

message TpRunResponse {
  string runId = 1 [(scalapb.field).type = "java.util.UUID"];
}

message TpAbortRequest {
  string runId = 1 [(scalapb.field).type = "java.util.UUID"];
}

message TpAbortResponse {
  bool aborted = 1;
}

message TpWatchRequest {
  TpRunTestId runTestId = 1 [(scalapb.field).no_box = true];
  google.protobuf.BytesValue versionstamp = 2 [(scalapb.field).type = "com.apple.foundationdb.tuple.Versionstamp"];
}

message TpWatchResponse {
  bool ended = 1;
  bytes versionstamp = 2 [(scalapb.field).type = "com.apple.foundationdb.tuple.Versionstamp"];
  TpTestReport report = 3 [(scalapb.field).no_box = true];
}

message TpTestReport {
  google.protobuf.Timestamp time = 1 [(scalapb.field).type = "java.time.Instant", (scalapb.field).no_box = true];
  TpTestEvent event = 2;
}

message TpRunHierarchy {
  map<int32, TpTestNode> hierarchy = 1;
}

message TpGetDistributionsRequest {
  string runId = 1 [(scalapb.field).type = "java.util.UUID"];
}

message TpRunDistribution {
  string runId = 1 [(scalapb.field).type = "java.util.UUID"];
  int32 testId = 2 ;
  string image = 3;
  repeated string args = 4;
}
